--- a/lineartanimdata.ipynb
+++ b/lineartanimdata.ipynb
@@ -327,6 +327,8 @@
       "cell_type": "code",
       "source": [
         "#The name of the scene (change it if you want to upload your own video)\n",
+        "# NO CAL FER SEGMENTACIÓ AMB LA PROVA, JA INCORPORA ELS FITXERS EXTRETS PER SAM2\n",
+        "# (per facilitar les proves de l'alternativa al sketchkeras)\n",
         "scene = \"prova\""
       ],
       "metadata": {
