--- a/lineartanimdata.ipynb
+++ b/lineartanimdata.ipynb
@@ -1347,7 +1347,7 @@
         "#Download the color+lineart frames\n",
         "!zip -r -qq {scene}_color.zip data/scenes/{scene}/out_overlap_sketch/\n",
         "from google.colab import files\n",
-        "files.download(scene+\"_color.zip\")"
+        "files.download(scene+\"_gt.zip\")"
       ],
       "metadata": {
         "id": "6MEJpzMz6m8i",
@@ -1432,7 +1432,7 @@
         "#Download the lineart frames\n",
         "!zip -r -qq {scene}_lineart.zip data/scenes/{scene}/out_overlap_sketchalpha/\n",
         "from google.colab import files\n",
-        "files.download(scene+\"_lineart.zip\")"
+        "files.download(scene+\"_lines.zip\")"
       ],
       "metadata": {
         "id": "9gSJvfP1dDUw",
