--- a/lineartanimdata.ipynb
+++ b/lineartanimdata.ipynb
@@ -6,15 +6,10 @@
       "provenance": [],
       "gpuType": "T4",
       "collapsed_sections": [
-        "a9AkOI6a7pU_",
+        "Ube9BEML77F1",
         "NpMvHkN38FX0",
         "IPPe2P1u8V8r",
-        "IGwEJFckChUV",
-        "RiAvuvbOM8X_",
-        "JZg3iNnXM5nD",
-        "Oz662vlF8ooE",
-        "EgZu9Bb384Nf",
-        "G3S66nMa6_FS"
+        "cM_ho5TuBoO1"
       ],
       "include_colab_link": true
     },
